<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textDegrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textState"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="48dp"
        android:text="@string/degrees"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textCity"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="48dp"
        android:text="@string/state"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="372dp"
        android:text="@string/city"
        android:textSize="24sp" />

</RelativeLayout>